tests/integration/seed/predictions/invalid/zone2.jsonlines
{"annotations": { "FOO": {"entities": [{"tag": "name", "start": 23, "end": 33 }] }}, "uuid": "1831440"}
